	* Fix parse of \# syntax with space for type LOC.
	* Fix ldns_dname_absolute for escape sequences, fixes some parse errs.
	* bugfix #297: linking ssl, bug due to patch submitted as #296.
	* bugfix #299: added missing declarations to host2str.h
	* ldns-compare-zones -s to not exclude SOA record from comparison.
	* --disable-rpath fix
	* fix ldns_pkt_empty(), reported by Alex Nicoll.

1.6.4	2010-01-20
	* Imported pyldns contribution by Zdenek Vasicek and Karel Slany.
	  Changed its configure and Makefile to fit into ldns.
	  Added its dname_* methods to the rdf_* class (as is the ldns API).
	  Changed swig destroy of ldns_buffer class to ldns_buffer_free.
	  Declared ldns_pkt_all and ldns_pkt_all_noquestion so swig sees them.
	* Bugfix: parse PTR target of .tomhendrikx.nl with error not crash.
	* Bugfix: handle escaped characters in TXT rdata.
	* bug292: no longer crash on malformed domain names where a label is
	  on position 255, which was a buffer overflow by one.
	* Fix ldns_get_rr_list_hosts_frm_fp_l (strncpy to strlcpy change),
	  which fixes resolv.conf reading badly terminated string buffers.
	* Fix ldns_pkt_set_random_id to be more random, and a little faster,
	  it did not do value 0 statistically correctly.
	* Fix ldns_rdf2native_sockaddr_storage to set sockaddr type to zeroes,
	  for portability.
	* bug295: nsec3-hash routine no longer case sensitive.
	* bug298: drill failed nsec3 denial of existence proof.

1.6.3	2009-12-04
	* Bugfix: allow for unknown resource records in zonefile with rdlen=0.
	* Bugfix: also mark an RR as question if it comes from the wire
	* Bugfix: NSEC3 bitmap contained NSEC
	* Bugfix: Inherit class when creating signatures

1.6.2	2009-11-12
	* Fix Makefile patch from Havard Eidnes, better install.sh usage.
	* Fix parse error on SOA serial of 2910532839.
	  Fix print of ';' and readback of '\;' in names, also for '\\'.
	  Fix parse of '\(' and '\)' in names.  Also for file read. Also '\.'